--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.22.0",
-    "@types/jsonwebtoken": "^9.0.7",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -56,7 +55,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@types/jsonwebtoken": "^9.0.7"
   },
   "jest": {
     "moduleFileExtensions": [
