--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "form-data": "^4.0.1",
     "google-auth-library": "^9.15.0",
     "multer": "^1.4.5-lts.1",
