--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "form-data": "^4.0.1",
     "google-auth-library": "^9.15.0",
     "multer": "^1.4.5-lts.1",
+    "mustache": "^4.2.0",
     "nodemailer": "^6.9.16",
     "puppeteer": "^23.9.0",
     "reflect-metadata": "^0.2.0",
